# multiresolution-mesh-creator

./: .gitignore  .gitmodules  LICENSE  README.md  convertToQuantizedDracoMesh  createMultiresMeshes.py  create_multiresolution_meshes.py  dracoEncoding.cpp  io_utils.py  multiresolution.py  multiresolution_mesh_creator.yml  multiresolution_sharding.py  mySubdivide.py  pyproject.toml  seams.py  setup.cfg  temp.stl  test.sh  test.yaml  testing.ipynb  testing.py  tmp.yml  trimeshAttempt.py  utils.py  workspace.code-workspace
backup-configs/: run-config.yaml
configs/: dask-config.yaml  run-config_test.yaml
dask-config.yaml/: jobqueue.yaml
dask-logs/: LSFCluster-0-109076965.err  LSFCluster-0-109076965.out  LSFCluster-0-109078715.err  LSFCluster-0-109078715.out
dask-worker-logs/: LSFCluster-0-109079846.err  LSFCluster-0-109079846.out
dracoC/: a.out  convertToQuantizedDracoMesh  dracoEncoding.cpp  draco_encoder_custom  draco_encoder_custom.cpp  junk.drc  temp.drc
job-logs/: LSFCluster-0-109080331.err  LSFCluster-0-109080331.out  LSFCluster-0-109081240.err  LSFCluster-0-109081240.out  LSFCluster-0-109081631.err  LSFCluster-0-109081631.out  LSFCluster-0-109081835.err  LSFCluster-0-109081835.out  LSFCluster-0-109081902.err  LSFCluster-0-109081902.out  LSFCluster-0-109081953.err  LSFCluster-0-109081953.out  LSFCluster-0-109082255.err  LSFCluster-0-109082255.out  LSFCluster-0-109083224.err  LSFCluster-0-109083224.out  LSFCluster-0-109083403.err  LSFCluster-0-109083403.out  LSFCluster-0-109083472.err  LSFCluster-0-109083472.out  LSFCluster-0-109083503.err  LSFCluster-0-109083503.out  LSFCluster-0-109086197.err  LSFCluster-0-109086197.out  LSFCluster-0-109087513.err  LSFCluster-0-109087513.out  LSFCluster-1-109083312.err  LSFCluster-1-109083312.out  LSFCluster-1-109083404.err  LSFCluster-1-109083404.out  LSFCluster-1-109083473.err  LSFCluster-1-109083473.out  LSFCluster-1-109083504.err  LSFCluster-1-109083504.out  LSFCluster-1-109086196.err  LSFCluster-1-109086196.out  LSFCluster-1-109087512.err  LSFCluster-1-109087512.out  LSFCluster-2-109083311.err  LSFCluster-2-109083311.out
local-config/: dask-config.yaml  run-config.yaml  template-dask-config.yaml
lsf-config/: dask-config.yaml  run-config.yaml
lsf-config-my/: dask-config.yaml  run-config.yaml
lsf-config0p10/: run-config.yaml
lsf-config0p25/: run-config.yaml
lsf-config0p25_d3a10/: run-config.yaml
lsf-config0p25_d3p5a10/: run-config.yaml
lsf-config0p25_d4a10/: run-config.yaml
lsf-config_mito/: dask-config.yaml  run-config.yaml
multiresolution_mesh_creator/: create_multiresolution_meshes.py  utils.py
multiresolution_mesh_creator/src/: create_multiresolution_meshes.py
multiresolution_mesh_creator/util/: dask_util.py  io_util.py  logging.py  mesh.py  mesh_util.py
sandbox/: demo_create_meshes_local.py
test/test_meshes/: 1.ply  2.ply
test_meshes/: 1.ply  2.ply  2.stl
