[project]
name = "multiresolution-mesh-creator"
version = "0.0.1"
description = "Convert single-scale (or a set of multi-scale) meshes to the neuroglancer multi-resolution mesh format"
readme = "README.md"
authors = [{name = "David Ackerman", email = "ackermand@janelia.hhmi.org"}]
urls = { "Homepage" = "https://github.com/janelia-cosem/multiresolution-mesh-creator", "Bug Tracker" = "https://github.com/janelia-cosem/multiresolution-mesh-creator/issues" }
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">= 3.12"

[project.scripts]
create-multiresolution-meshes = "multiresolution_mesh_creator.src.create_multiresolution_meshes:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
name = "multiresolution-mesh-creator"
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
multiresolution-mesh-creator = { path = ".", editable = true }
dracopy = ">=1.5.0,<2"

[tool.pixi.dependencies]
trimesh = ">=4.6.8,<5"
dask = ">=2025.4.1,<2026"
pyfqmr = ">=0.3.0,<0.4"

[tool.pixi.tasks]
help = "create-multiresolution-meshes --help"
demo-local = "create-multiresolution-meshes local-config -n 1"

[tool.pixi.environments]
view = ["neuroglancer"]

[dependency-groups]
neuroglancer = ["neuroglancer"]