[project]
name = "multiresolution-mesh-creator"
version = "0.1.0"
description = "Create neuroglancer-compatible multiresolution meshes from high-resolution 3D meshes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David Ackerman", email = "ackermand@janelia.hhmi.org" },
]
license-files = ["LICENSE"]
dependencies = [
  "dracopy>=1.5.0,<2",
  "trimesh>=4.6.8,<5",
  "dask>=2025.4.1,<2026",
  "distributed>=2025.4.1,<2026",
  "dask-jobqueue>=0.9.0",
  "pyfqmr>=0.3.0,<0.4",
  "bokeh>=3.1.0"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/yourusername/yourrepo"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
create-multiresolution-meshes = "multiresolution_mesh_creator.src.create_multiresolution_meshes:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["multiresolution_mesh_creator*"]